# transmet-authenticator-firmware

components/admin-app/: Cargo.toml
components/apdu-dispatch/: Cargo.toml  README.md
components/apdu-dispatch/.github/workflows/: ci.yml
components/apdu-dispatch/src/: app.rs  dispatch.rs  lib.rs  types.rs
components/apdu-dispatch/tests/: dispatch.rs
components/dispatch-fido/: Cargo.toml
components/dispatch-fido/src/: fido.rs
components/fido-authenticator/: Cargo.toml
components/fido-authenticator/src/: constants.rs  lib.rs
components/littlefs2-sys/: build.rs  string.c
components/littlefs2-sys/littlefs/: lfs.c  lfs_util.c  lfs_util.h
components/ndef-app/: Cargo.toml
components/nfc-device/: Cargo.toml
components/oath-authenticator/: Cargo.toml
components/piv-authenticator/: Cargo.toml
components/provisioner-app/: Cargo.toml
components/se050/: Cargo.toml
components/se050/src/: lib.rs  se050.rs  t1.rs  types.rs
cortex-m-rtic/macros/src/: codegen.rs
runners/lpc55/: Cargo.toml
runners/lpc55/board/: Cargo.toml
runners/lpc55/src/: types.rs
runners/nrf52840/: .gitignore  Cargo.toml  Makefile  README.md  ext_flash.txt
runners/nrf52840/.cargo/: config
runners/nrf52840/data/: prepare.py
runners/nrf52840/deployment/: Makefile
runners/nrf52840/src/: board_nrfdk.rs  board_proto1.rs  extflash.rs  flash.rs  fpr.rs  main.rs  rle.rs  se050.rs  spi_nor_flash.rs  types.rs  ui.rs  usb.rs
